# xawtv3

./: .gitignore  .travis.yml  Changes  KNOWN_PROBLEMS  Make.config.in  Makefile  Makefile.clean  Makefile.in  Makefile.kradio  Miro_gpio.txt  Programming-FAQ  README  README.bttv  README.de  README.lirc  README.network  README.recording  README.translate  README.xfree4  Sound-FAQ  TODO  Trouble-Shooting  UPDATE_TO_v3.0  Xawtv.ad  acconfig.h  autogen.sh  build-test  capture-test  chan.h  chan2c.pl  channel.c  channel.h  channels.h  config.h.in  configure  configure.ac  configure.in  dump-mixers.c  fbtv.c  grab-bttv.c  (+28 more)
.github/workflows/: ci.yml
Channelmaps/: Antenne.html  Europe.chan  Kabel.html  README  USA.chan  USAcable.chan  tab
bttv/: .bttv.o.flags  .i2c.o.flags  .msp3400.o.flags  .tuner.o.flags  .videodev.o.flags  MAKEDEV  MODULES  Makefile  bttv.c  bttv.h  i2c.c  i2c.h  msp3400.c  nicam  tuner.c  update  videodev.c  videodev.h
bttv/doc/: ICs
bttv/driver/: MAKEDEV  Makefile  bttv.c  bttv.c-0.5.8  bttv.h  i2c.c  i2c.h  i2c_chardev.c  linux-2.0.33.diff  msp3400.c  tuner.c  update  videodev.c  videodev.h
bttv/experimental/: Makefile  README  algo-bit.c  algo-bit.h  bt848.h  bttv.c  bttv.h  i2c.c  i2c.h  tuner.c  update  videodev.c  videodev.h
cc/: Makefile  Makefile.in
common/: RegEdit.c  RegEdit.h  RegEditI.h  Subdir.mk  alsa_stream.c  alsa_stream.h  capture.c  capture.h  channel.c  channel.h  commands.c  commands.h  event.c  frequencies.c  frequencies.h  get_media_devices.c  joystick.c  lirc.c  midictrl.c  parseconfig.c  vbi-data.c  vbi-data.h  vbi-sim.c
console/: Subdir.mk  fbtools.c  fbtools.h  fbtv.c  fs.c  fs.h  ftp.c  ftp.h  matrox.c  radio.c  record.c  scantv.c  showqt.c  showriff.c  streamer.c  ttv.c  v4l-conf.c  v4l-info.c  vbi-tty.c  webcam.c
contrib/: dot.lircrc  hauppauge-eeprom  mjpeg.html  motv.desktop  motv.metainfo.xml  mtt.desktop  mtt.metainfo.xml  xawtv.appdata.xml  xawtv.desktop  xawtvsort.pl
contrib/cc/: Makefile  cc.c
contrib/vtx2xawtv/: README.vtx2xawtv  vtx2xawtv
debian/: alevtd.files  changelog  control  copyright  fbtv.files  fbtv.menu  pia.files  radio.files  radio.menu  rules  scantv.files  streamer.files  ttv.files  ttv.menu  v4l-conf.files  watch  webcam.files  xawtv-plugin-alsa.files  xawtv-plugin-qt.files  xawtv-plugins.files  xawtv-tools.files  xawtv.conffiles  xawtv.config  xawtv.files  xawtv.menu  xawtv.postinst  xawtv.postrm  xawtv.template.Master  xawtv.template.da  xawtv.template.de  xawtv.template.es  xawtv.templates
debian/po/: da.po  de.po  es.po  fr.po  jp.po  templates.pot
debug/: Subdir.mk  gl.c  gl.h  hwscan.c  vbi-debug.c  xvideo.c
font/: Makefile  Makefile.in  bigfont.pl  fonts.dir  led-iso8859-1.bdf  led-iso8859-15.bdf  led-iso8859-2.bdf  led-koi8-r.bdf  led-latin1.bdf  led-latin2.bdf
fonts/: Subdir.mk  led-iso8859-1.bdf  led-koi8-r.bdf
frequencies/: Index.map  init.pl  oirt-sl-sh.list  pal-australia.list
http/: Makefile.in  about.html.in  alevtd.man  bottom.html  bottom.html.in  devices.c  httpd.h  main.c  page.c  request.c  response.c
i2c/: Makefile  Makefile.in  detect.c  eeprom.c  ir.c  scan.c
jwz/: remote.c  remote.h
libng/: Makefile.in  OVERVIEW  Subdir.mk  clipping.c  color_common.c  color_lut.c  color_packed.c  color_yuv2rgb.c  convert.c  devices.c  grab-bsd.c  grab-ng.c  grab-ng.h  grab-v4l.c  grab-v4l2.c  mjpeg.c  videodev.h  videodev2-old.h  videodev2.h  writeavi.c  writefile.c  writeqt.c
libng/contrib-plugins/: Subdir.mk  bilinear.c  cubic.c  flt-smooth.c  linear-blend.c  linedoubler.c  snd-alsa.cc
libng/plugins/: Makefile.in  Subdir.mk  conv-audio.c  conv-mjpeg.c  drv0-bsd.c  drv0-libv4l.c  drv0-v4l2-old.c  drv0-v4l2.c  drv0-v4l2.tmpl.c  drv1-v4l.c  flt-debug.c  flt-disor.c  flt-gamma.c  flt-invert.c  flt-nop.c  flt-smooth.c  invert.c  nop.c  read-avi.c  read-dv.c  read-qt.c  snd-oss.c  write-avi.c  write-dv.c  write-qt.c
libvbi/: Makefile.in  README  Subdir.mk  cache.c  cache.h  exp-gfx.c  export.c  vbi.c  vbi.h
man/: Makefile.in  Subdir.mk  alevtd.1  dump-mixers.1  fbtv.1  fbtv.man  motv.1  mtt.1  ntsc-cc.1  pia.1  propwatch.1  record.1  rootv.1  scantv.1  scantv.man  streamer.1  subtitles.1  ttv.1  v4l-conf.8  v4l-conf.man  webcam.1  xawtv-remote.1  xawtv-remote.man  xawtv.1  xawtv.man  xawtvrc.5
man/es/: fbtv.1  rootv.1  scantv.1  streamer.1  subtitles.1  ttv.1  v4l-conf.8  xawtv-remote.1  xawtv.1  xawtvrc.5
man/fr/: xawtv.1
mk/: compile.mk
msvc/: getopt.h  showriff.vcxproj  showriff.vcxproj.filters  xawtv3.sln
oldstuff/: set-tv.c  set-tv.man  streamer-old.c
oldstuff/vtx/: main.c  vtx.cgi  (+1 more)
patches/: README  TVscreen-0.4.3-diff  xtvscreen-0.4.3-diff
radio/: Makefile.in  radio-old.c  radio.c  radio.man  x
scripts/: bigfont.pl  subtitles
src/: Makefile.in  MoTV-de  MoTV-default  MoTV-fixed  MoTV-it  MoTV.ad  MoTV.de.ad  MoTV.it.ad  Xawtv.ad  aa.c  byteorder.h  capture.c  capture.h  channel.c  channel.c.orig  channel.h  colorspace.c  colorspace.c.rej  colorspace.h  commands.c  commands.h  complete.c  conf.c  event.c  fbtools.c  fbtools.h  fbtv.c  fix  frequencies.c  fs.c  fs.h  gl.ad  gl.c  grab-bsd.c  grab-ng.c  grab-ng.h  grab-v4l.c  grab-v4l2.c  grab.c  grab.h  (+46 more)
structs/: struct-dump.c  struct-dump.h
tools/: Makefile.in  README  dump-mixers.c  propwatch.c  record.c  record.man  showriff.c  showriff.man
travis/: linux.bionic.install  linux.bionic.script
vbistuff/: Subdir.mk  about.html.in  alevt.css.in  alevtd.c  bottom.html.in  httpd.h  main.c  ntsc-cc.c  page.c  request.c  response.c
vtx/: .vtx.o.flags  Makefile  README  VideoteXt-0.6-patch  vtx.c  vtx.h  vtx.sh
webcam/: Makefile  Makefile.in  ftp.c  ftp.h  parseconfig.c  parseconfig.h  webcam-old.c  webcam.c  webcam.man
x11/: MoTV-de  MoTV-default  MoTV-fixed  MoTV-fr  MoTV-it  Subdir.mk  Xawtv.ad  atoms.c  atoms.h  blit.c  blit.c.orig  blit.c.rej  blit.h  conf.c  icons.c  man.c  motv.c  mtt.ad  mtt.c  pia.c  propwatch.c  rootv.c  rootv.xml  v4lctl.c  vbi-gui.c  vbi-x11.c  vbi-x11.h  videodev2-new.h  wmhooks.c  wmhooks.h  x11.c  x11.h  xawtv-remote.c  xawtv.c  xt.c  xt.h  xv.c  xv.h
(+2 files in other folders)
