dnl ---------------------------------------------------------------------
dnl Process this file with autoconf to produce a configure script.
AC_INIT(main.c)
AC_CONFIG_HEADER(config.h)

dnl ---------------------------------------------------------------------
dnl Checks for programs.
AC_PROG_CC
AC_PROG_CPP
AC_PROG_CXX
AC_PROG_INSTALL
AC_CHECK_PROGS(DEPEND,gccmakedep makedepend,true)

dnl ---------------------------------------------------------------------
dnl X11 checks

AC_PATH_XTRA
if test "-DX_DISPLAY_MISSING" = "$X_CFLAGS"; then
  AC_MSG_ERROR(can not find X11)
fi
AC_SUBST(X_CFLAGS)
AC_SUBST(X_PRE_LIBS)
AC_SUBST(X_EXTRA_LIBS)
AC_SUBST(X_LIBS)
AC_SUBST(x_libraries)

AC_CHECK_LIB(Xaw3d, Xaw3dComputeTopShadowRGB, 
  XAWLIB=Xaw3d, XAWLIB=Xaw, 
  $X_LIBS $X_PRE_LIBS -lXext -lXmu -lXt -lX11)
AC_SUBST(XAWLIB)

AC_CHECK_LIB(Xxf86dga, XF86DGAQueryExtension,,, 
	$X_LIBS $X_PRE_LIBS -lXext -lX11)

AC_CHECK_LIB(jpeg, jpeg_start_compress,,,)

dnl ---------------------------------------------------------------------
dnl video dev checks

AC_ARG_WITH(bttv,
  [  --with-bttv=/path       give the path of the bttv package],
  bttvdir="$withval", bttvdir="bttv")
AC_SUBST(bttvdir)

echo -n "checking for bttv... "
if test -f "$bttvdir/bttv.h"; then
  echo "in $bttvdir"
dnl  AC_DEFINE(HAVE_BTTV)
else
  echo "no (you might want to try --with-path=/path_to_bttv)"
fi

dnl ---------------------------------------------------------------------
dnl KDE (kradio)
if test "$KDEDIR" != ""; then KRADIO=kradio; else KRADIO=""; fi
AC_SUBST(KRADIO)

dnl ---------------------------------------------------------------------
AC_OUTPUT(Makefile)
